Revert "Fixes the search box overlapping with content when first shown (#666)" (#667)
This reverts commit 7f82a197b921cbff05eea63dfc7a409bf692d7f9.

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -1417,7 +1417,6 @@ mark.fade-out {
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
-  display: block;
 }
 #searchbar {
   width: 100%;
